--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <h1>ARCHEUM</h1>
             <ul>
                <li><a href="#home">Home</a></li>
-               <li><a href="">About</a></li>
+               <li><a href="">About</a></li>ko
+               
                <li><a href="#home-2">Contact</a></li>
                <li><a href="../Login.html">Sign-in</a></li>
                <li><a href="">Wishlist ❤️</a></li>
